public/css/hg-base.css
/* Custom CSS tweaks for Hematogones.com */
/*  Change top bar to purpule gradient */
.bg-inverse {
    background: black;
    background: -webkit-linear-gradient(#5f006f, black);
    background: -o-linear-gradient(#5f006f, black);
    background: -moz-linear-gradient(#5f006f, black);
    background: linear-gradient(#5f006f, black);
}

/* add vertical spacing between your rows add this line to your css: */
.top-buffer {
	margin-top: 1rem;
}
.bottom-buffer {
	margin-bottom: 1rem;
}


/* label hover and active background*/
label:hover {
    text-decoration: none;
    background-color: rgba(3, 169, 244, 0.19);
}

.highlight {
    background-color: rgba(156, 39, 176, .25);
}

.helpful {
    background-color: rgba(246, 255, 10, 0.34);
}

/* Highlight collapsed divs when opened */
.divshow {
    background-color: rgba(158, 158, 158, 0.19);
}

/* reset padding and margins for checkbox columns */
.btn {
    margin: 0;
    padding: 0;
}

.chkboxes {
    padding: 0.25em;

}

/*  Shrink Table header font size  */
.table {
    font-size: 0.65em;
}

/*Change textarea font to monospace */
textarea {
    font-family: monospace;
}

/* Thin select boxes with this class */
.custom-select-sm {
    font-size: 80%;
    padding: 0;
}

/*  Sticky cap window to bottom right of screen   */
.cap-fixed {
    position: fixed;
    right: 0;
    width: 390px;
    height: 400px;
    bottom: 0;

}
/* add outline to div */
.outline-danger {
    background-color: transparent;
    border-color: #d9534f;
}

.outline-warning {
    background-color: transparent;
    border-color: #f0ad4e!important;
}

/*  Highlight empty fields */
.empty {
    border: 4px solid red;
}

/*  Highlight empty optional fields */
.empty-opt {
	border: 4px solid blue;
}

/* overflow scroll on main content */
#cap-bottom-left {
    overflow: scroll;
    max-height: 800px;
}

/*message center*/
.message-center .message-box {
	width: 100%;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	padding: 1rem 1rem 2rem 2rem;
	margin: 0.5rem 0;
	background-color: rgba(100, 176, 228, 0.5);
}

.message-center .message-box .message-item {
	padding-right: 1rem;
}

.message-center .message-box .message-dismiss {
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
}

.message-center .message-box .message-dismiss h2 {
	line-height: 0.5;
	margin: 0;
}

.message-center .message-fail {
	background-color: rgba(219, 114, 123, 0.5);
}

/* unsuccessful ajax call for pdf create or download */
#create-pdf-fail, #download-pdf-fail {
	background-color: rgba(219, 114, 123, 0.5);
}

/* form validation error fields */

.form-group .error {
	width: 100%;
	display: block;
	background-color: rgba(219, 114, 123, 0.5);
	box-sizing: border-box;
	padding: 0.5rem;
}

.button-box {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

/* style changes regarding download and create pdf buttons */
.standard-button-box, .report-button-box, .combined-button-box {
	display: flex;
	width: 300px;
	flex-wrap: wrap;
	flex-direction: row;
	justify-content: space-around;
}

.standard-button-box > *, .report-button-box > *, .combined-button-box > * {
	margin: 0.5rem 0;
}

.individual-report-btn-box a  {
	margin-left: 2rem;
}

.report-button-box {
	margin-top: 0.5rem;
}
.report-button-box .btn {
	margin: 0;
}

.previous-report {
	padding: 1rem 0;
}

/* snippets */
button.snippet-result {
	background-color: rgba(100, 176, 228, 0.5);
	border: none;
	border-radius: 5px;
	padding: 0.25rem;
}

/* breast fixation inputs */
.pseudotable {
	display: flex;
	flex-direction: column;
	width: fit-content;
}
.pseudotable .form-inline {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	padding: 0.5em;
}

.pseudotable .form-inline .inline-margin {
	margin-right: 1rem;
	font-size: 1.25rem;
}
/*.pseudotable .form-inline .input-group {
	min-width: 400px;
}*/

/* hide previous reports module at the bottom of each page by default */
#previous-reports {
	display: none;
}

/* IHC: hide the selected preset edit field when no preset is selected */
#selected_preset {
	display: none;
}
/* fix display problem with tagit field on snippets page */
#ent_key_container > ul {
	width: 100%;
}

/* floating cap 'done' button */
.float {
    position: fixed;
    width: 65px;
    height: 65px;
    bottom: 20px;
    right: 20px;
    background-color: #000b5c82;
    color: #FFF;
    border-radius: 60px;
    text-align: center;
    box-shadow: 2px 2px 3px #999;
    z-index: 999;
}

button:focus {
    outline: 0;
}

.my-float {
    margin-top: 22px;
}

